Fixed Complete Workout function. Fixed modal wrap

--- a/css/app.css
+++ b/css/app.css
@@ -110,8 +110,9 @@ h3 {
 	margin: auto;
 }
 */
-#btnDiv {
-	flex-direction: row;
+#btnDiv, #completeWorkoutBtn, #showWrkoutLogBtn, #deleteWrkoutBtn {
+	display: inline;
+	margin-right: 10px;
 }
 
 
@@ -119,7 +120,7 @@ h3 {
 	flex-direction: row;
 	display: inline;
 	margin: auto;
-	width: 150px;
+	width: 90px;
 	height: 30px;
 	font-size: 25px;
 }
@@ -214,6 +215,7 @@ button {
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	white-space: nowrap;
 }
 
 /* Modal Content/Box */
@@ -222,7 +224,7 @@ button {
     margin: 15% auto; /* 15% from the top and centered */
     padding: 10px;
     border: 1px solid #888;
-    width: 60%; /* Could be more or less, depending on screen size */
+    width: 100%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
